--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                     <h2>Irf<span>an's Po</span>rtfolio</h2>
                 </div>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-text">
@@ -38,9 +38,10 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="subtitle">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit<br> Culpa ipsa, quae quo maxime nobis
-                        quasi
-                        est minus<br> quod perferendis in!</p>
+                    <p>I'm a web developer with a focus on the MERN stack<br> but still exploring other technologies and
+                        frameworks<br> that catch my interest! if you're looking for a developer<br>
+                         to add to your team, I'd
+                        love to hear from you!</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -94,14 +95,15 @@
                 <div>
                     <i class="fa-solid fa-mobile"></i>
                     <h2>App Design</h2>
-                    <p>Assist in the development of a new <br>brand and how to convey it cohesively across our multiple Web
+                    <p>Assist in the development of a new <br>brand and how to convey it cohesively across our multiple
+                        Web
                         properties.</p>
                     <a href="#">Learn More</a>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div id="portfolio">
         <div class="container">
             <h1 class="subtitle">My Work</h1>
@@ -112,7 +114,7 @@
                         <h3>Social Media App</h3>
                         <p>The App Connects You To The talented people arround the world.
                             download it from play store.</p>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -121,7 +123,7 @@
                         <h3>Music App</h3>
                         <p>The App Connects You To The talented people arround the world.
                             download it from play store.</p>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -130,7 +132,7 @@
                         <h3>Online Shopping App</h3>
                         <p>The App Connects You To The talented people arround the world.
                             download it from play store.</p>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
@@ -151,7 +153,8 @@
                         <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
                         <a href=""><i class="fa-brands fa-twitter-square"></i></a>
                         <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/irfan-shaikh-a079972bb/"><i
+                                class="fa-brands fa-linkedin"></i></a>
                     </div>
                     <a href="mycv.pdf" download class="btn btn2">Download CV</a>
                 </div>
