--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <a href="https://www.linkedin.com/in/irfan-shaikh-a079972bb/"><i
                                 class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="mycv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="Irfan's CV.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form>
