--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
             <div class="header-text">
                 <p>UI/UX Designer</p>
-                <h1>Hey I Am <span>Irfan</span><br> From India </h1>
+                <h1>Hey I Am <span>Irfan</span><br> From Pakistan </h1>
             </div>
         </div>
     </div>
