--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#services">Portfolio</a></li>
+                    <li><a href="#portfolio">contact</a></li>
+                    <li><a href="#contact">My Work</a></li>
                 </ul>
             </nav>
             <div class="header-text">
-                <p>UI/UX Designer</p>
+                <p>Graphic Designer</p>
                 <h1>Hey I Am <span>Irfan</span><br> From Pakistan </h1>
             </div>
         </div>
@@ -38,10 +38,11 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="subtitle">About Me</h1>
-                    <p>I'm a web developer with a focus on the MERN stack<br> but still exploring other technologies and
-                        frameworks<br> that catch my interest! if you're looking for a developer<br>
-                         to add to your team, I'd
-                        love to hear from you!</p>
+                    <p>As a graphic designer, I strive to create designs that are not only visually appealing but also
+                        communicate a message effectively<br>. With 2 years of experience in the industry, I
+                        have worked with clients from various sectors, such as fashion, food, and education. My areas of
+                        expertise include logo design, and web design<br> I take pride in my ability to
+                        deliver projects on time and on budget, while maintaining the highest standards of quality.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
