--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Portfolio</a></li>
-                    <li><a href="#portfolio">contact</a></li>
-                    <li><a href="#contact">My Work</a></li>
+                    <li><a href="#portfolio">My Work</a></li>
+                    <li><a href="#contact">Reach us</a></li>
                 </ul>
             </nav>
             <div class="header-text">
@@ -39,9 +39,9 @@
                 <div class="about-col-2">
                     <h1 class="subtitle">About Me</h1>
                     <p>As a graphic designer, I strive to create designs that are not only visually appealing but also
-                        communicate a message effectively<br>. With 2 years of experience in the industry, I
+                        communicate a message effectively<br>With 2 years of experience in the industry,I
                         have worked with clients from various sectors, such as fashion, food, and education. My areas of
-                        expertise include logo design, and web design<br> I take pride in my ability to
+                        expertise include logo design, and web design<br>I take pride in my ability to
                         deliver projects on time and on budget, while maintaining the highest standards of quality.</p>
 
                     <div class="tab-titles">
