--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <div class="about-col-2">
                     <h1 class="subtitle">About Me</h1>
                     <p>As a graphic designer, I strive to create designs that are not only visually appealing but also
-                        communicate a message effectively<br>With 2 years of experience in the industry,I
-                        have worked with clients from various sectors, such as fashion, food, and education. My areas of
+                        communicate a message effectivelyWith 2 years of experience in the industry,I
+                        have worked with clients from various sectors, such as fashion, food, and education<br> My areas of
                         expertise include logo design, and web design<br>I take pride in my ability to
                         deliver projects on time and on budget, while maintaining the highest standards of quality.</p>
 
@@ -52,8 +52,8 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>UI?UX</span><br>Designing Web/App interfaces</li>
-                            <li><span>Web Development</span><br>Web app Development</li>
-                            <li><span>App Development</span><br>Building Android/iOS apps</li>
+                            <li><span>Web Designer</span><br>Web Designer</li>
+                            <li><span>App Designer</span><br>Design Android/iOS apps</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="Experience">
